GoalTracker/force-app/main/default/objects/Cashnet_Setting__c/Cashnet_Setting__c.object-meta.xml
<CustomObject>
    <label>Cashnet Setting</label>
    <nameField>
        <label>Cashnet Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cashnet Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>