GoalTracker/force-app/main/default/objects/Cashnet_Setting__c/fields/Cashnet_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Cashnet_Customer_Id__c</fullName>
    <description>Customer Id/ Customer code</description>
    <label>Cashnet Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>