GoalTracker/force-app/main/default/objects/Cashnet_Setting__c/fields/Event_Fee_G_L__c.field-meta.xml
<CustomField>
    <fullName>Event_Fee_G_L__c</fullName>
    <label>Event Fee G/L</label>
    <length>30</length>
    <type>Text</type>
</CustomField>