GoalTracker/force-app/main/default/objects/Cashnet_Setting__c/fields/Event_Fee_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Fee_Item_Code__c</fullName>
    <label>Event Fee Item Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>