GoalTracker/force-app/main/default/objects/Cashnet_Setting__c/fields/G_L__c.field-meta.xml
<CustomField>
    <fullName>G_L__c</fullName>
    <label>Gifts G/L</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>