GoalTracker/force-app/main/default/objects/Cashnet_Setting__c/fields/Gateway_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Endpoint_URL__c</fullName>
    <description>The endpoint for this setting.</description>
    <inlineHelpText>The endpoint for this setting.</inlineHelpText>
    <label>Gateway Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>