GoalTracker/force-app/main/default/objects/Cashnet_Setting__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Gifts Item Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>