GoalTracker/force-app/main/default/objects/Cashnet_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Merchant_Name__c</columns>
    <columns>Client__c</columns>
    <columns>Gateway_Name__c</columns>
    <columns>Gateway_Endpoint_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>